// 从 Warp 二进制自动提取
// 原始文件: attachment.proto
// 提取时间: 2026-01-27 12:35:47

syntax = "proto3";

package warp.multi_agent.v1;

import "google/protobuf/empty.proto";
import "document_content.proto";
import "options.proto";
import "file_content.proto";

option go_package = "github.com/warp/warp-proto-apis/multi_agent/v1";

message Attachment {
    oneof value {
        string plain_text = 1;
        warp.multi_agent.v1.ExecutedShellCommand executed_shell_command = 2;
        warp.multi_agent.v1.RunningShellCommand running_shell_command = 3;
        warp.multi_agent.v1.DriveObject drive_object = 4;
        warp.multi_agent.v1.DiffHunk diff_hunk = 5;
        warp.multi_agent.v1.DiffSet diff_set = 6;
        warp.multi_agent.v1.DocumentContent document_content = 7;
    }
}

message ExecutedShellCommand {
    string command = 1;
    string output = 2;
    int32 exit_code = 3;
    string command_id = 4;
}

message RunningShellCommand {
    string command = 1;
    warp.multi_agent.v1.LongRunningShellCommandSnapshot snapshot = 2;
}

message LongRunningShellCommandSnapshot {
    string output = 1;
    string cursor = 2;
    string command_id = 3;
}

message DriveObject {
    string uid = 1;
    oneof object_payload {
        warp.multi_agent.v1.Workflow workflow = 2;
        warp.multi_agent.v1.Notebook notebook = 3;
        warp.multi_agent.v1.GenericStringObject generic_string_object = 4;
    }
}

message Workflow {
    string name = 1;
    string description = 2;
    string command = 3;
}

message Notebook {
    string title = 1;
    string content = 2;
}

message GenericStringObject {
    string payload = 1;
    string object_type = 2;
}

message DiffHunk {
    string file_path = 1;
    warp.multi_agent.v1.FileContentLineRange line_range = 2;
    string diff_content = 3;
    uint32 lines_added = 4;
    uint32 lines_removed = 5;
    oneof current {
        string current_branch_name = 6;
        string current_headless_commit_sha = 7;
    }
    oneof base {
        string base_branch_name = 8;
        string base_headless_commit_sha = 9;
        google.protobuf.Empty uncommitted_changes = 10;
    }
}

message CurrentRef {
    oneof ref {
        string branch_name = 1;
        string headless_commit_sha = 2;
    }
}

message BaseRef {
    oneof ref {
        string branch_name = 1;
        string headless_commit_sha = 2;
        google.protobuf.Empty uncommitted_changes = 3;
    }
}

message DiffSet {
    message DiffHunk {
        string file_path = 1;
        warp.multi_agent.v1.FileContentLineRange line_range = 2;
        string diff_content = 3;
        uint32 lines_added = 4;
        uint32 lines_removed = 5;
    }

    repeated warp.multi_agent.v1.DiffSet.DiffHunk hunks = 1;
    warp.multi_agent.v1.CurrentRef curr_ref = 2;
    warp.multi_agent.v1.BaseRef base_ref = 3;
}
