// 从 Warp 二进制自动提取
// 原始文件: conversation_data.proto
// 提取时间: 2026-01-27 12:35:47

syntax = "proto3";

package warp.multi_agent.v1;

import "task.proto";

option go_package = "github.com/warp/warp-proto-apis/multi_agent/v1";

message ConversationData {
    repeated warp.multi_agent.v1.Task tasks = 1;
    repeated string ordered_message_ids = 2;
}
