// 从 Warp 二进制自动提取
// 原始文件: file_content.proto
// 提取时间: 2026-01-27 12:35:47

syntax = "proto3";

package warp.multi_agent.v1;

import "options.proto";

option go_package = "github.com/warp/warp-proto-apis/multi_agent/v1";

message FileContentLineRange {
    uint32 start = 1;
    uint32 end = 2;
}

message FileContent {
    string file_path = 1;
    string content = 2;
    warp.multi_agent.v1.FileContentLineRange line_range = 3;
}

message BinaryFileContent {
    string file_path = 1;
    bytes data = 2;
}

message AnyFileContent {
    oneof content {
        warp.multi_agent.v1.BinaryFileContent binary_content = 1;
        warp.multi_agent.v1.FileContent text_content = 2;
    }
}
